--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,11 @@
 	<description>Java microservice to handle all salary related data</description>
 	<properties>
 		<java.version>17</java.version>
-	</properties>
+        <!-- SonarQube properties -->
+        <sonar.projectKey>salary-api</sonar.projectKey>
+        <sonar.host.url>http://localhost:9000</sonar.host.url> <!-- or your actual SonarQube server -->
+        <sonar.login>${env.SONAR_TOKEN}</sonar.login> <!-- Optional: read token from environment -->	
+        </properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
